style: fix minor layout issues on phone

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -15,5 +15,5 @@
   width: 32px;
   border-radius: 50%;
   vertical-align: middle;
-  margin: -4px 12px -4px 4px;
+  margin: -4px 12px 4px -4px;
 }
