--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -12,6 +12,8 @@
 .rerun-search-field {
   padding: 0 8px;
   max-width: 200px;
+  width: 50%;
+  box-sizing: border-box;
 }
 
 .rerun-search-spinner {
